--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                 </p>
                 <p>
                 After removing the post-facto features, we ended up with a new model with <span style="color:#5eb55b;">150 features</span> that had much more realistic results. We operated
-                hyperparameter search with a grid search approach on all of our models. We show below the parameters tried and the best parameters found.
+                hyperparameter search with a grid search approach on all of our models. We show below the models implemented with their respective metrics and parameters.
               </p>
 
                 <div class="container_expand_on_hover" id="container_expand_on_hover">
