--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@
                     <div class="content">
                       <h4>Multi-Layer Perceptron</h4>
                       <p>
-                      - Accuracy: 80.4% <br>
-                      - AUC: 0.73 <br>
+                      - Accuracy: 79.1% <br>
+                      - AUC: 0.69 <br>
                       - Hidden layer sizes: 50x50x50
                       </p>
                       <!-- <p>Hidden layer sizes. Tried 1x100, 2x100 and 3x50.</p> -->
@@ -594,8 +594,39 @@
             <div class='container'>
 
                 <div class="row" style="display:flex; justify-content: center;">
-                    <img class="img-fluid" src="img/ROC_LGBM.png" style="max-height:250px;width:auto">
-                    <img class="img-fluid" src="img/cm_LGBM.png" style="max-height:250px;width:auto">
+                  <div class="card">
+                    <div class="card-header">
+                      LightGBM
+                    </div>
+                    <div class="card-body">
+                      <img class="img-fluid" src="img/ROC_LGBM.png" style="max-height:300px;width:auto">
+                      <img class="img-fluid" src="img/cm_LGBM.png" style="max-height:300px;width:auto">
+                    </div>
+                  </div>
+                </div>
+                <br>
+                <div class="row" style="display:flex; justify-content: center;">
+                  <div class="card">
+                    <div class="card-header">
+                      XGBoost
+                    </div>
+                    <div class="card-body">
+                      <img class="img-fluid" src="img/ROC_XGB.png" style="max-height:300px;width:auto">
+                      <img class="img-fluid" src="img/cm_XGB.png" style="max-height:300px;width:auto">
+                    </div>
+                  </div>
+                </div>
+                <br>
+                <div class="row" style="display:flex; justify-content: center;">
+                  <div class="card">
+                    <div class="card-header">
+                      AdaBoost
+                    </div>
+                    <div class="card-body">
+                      <img class="img-fluid" src="img/ROC_adaboost.png" style="max-height:300px;width:auto">
+                      <img class="img-fluid" src="img/cm_adaboost.png" style="max-height:300px;width:auto">
+                    </div>
+                  </div>
                 </div>
                 <!-- <div class="row" style="display:flex; justify-content: center;">
                     <img class="img-fluid" src="img/ROC_XGB.png" style="max-height:250px;width:auto">
