--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                     </div>
                     <div class="card-body">
                       <img class="img-fluid" src="img/ROC_adaboost.png" style="max-height:300px;width:auto">
-                      <img class="img-fluid" src="img/cm_adaboost.png" style="max-height:300px;width:auto">
+                      <img class="img-fluid" src="img/cm_adaboostt.png" style="max-height:300px;width:auto">
                     </div>
                   </div>
                 </div>
