--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
             evaluate our report, we sadly do not have access to the number of credit analysts necessary to perform a legitimate
             human evaluation test.</p>
 
-<p>As a result, we must leave the testing functionality to furhter work, but it is an interesting challenge to consider hypothetically.  As our results are primarily interaction-driven, it is quite complex to design an unbiased, representative metric of "improved performance" for a credit analyst.  The key functionaliy of our proposed test would be:</p>
+<p>As a result, we must leave the testing functionality to further work, but it is an interesting challenge to consider hypothetically.  As our results are primarily interaction-driven, it is quite complex to design an unbiased, representative metric of "improved performance" for a credit analyst.  The key functionaliy of our proposed test would be:</p>
                 </br>
                 <div class="container-fluid">
                     <div class="row">
@@ -1063,7 +1063,7 @@
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
                         <p>
-                        <a href="mailto:your-email@your-domain.com">cfosco@g.harvard.edu</a>
+                        <a href="mailto:cfosco@g.harvard.edu">cfosco@g.harvard.edu</a>
                         </p>
                     </div>
                 </div>
